--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,11 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        "julialang.language-julia"
+        "julialang.language-julia",
+        "tamasfe.even-better-toml",
+        "nefrob.vscode-just-syntax",
+        "mtxr.sqltools",
+        "evidence.sqltools-bigquery-driver"
       ]
     }
   }
