--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -13,6 +13,7 @@ services:
     volumes:
       - "..:/workspace"
       - "julia-depot:/opt/julia-depot"
+      - "/mnt/e/data/orcid:/workspace/data/orcid"
     command: >
       bash -c "
         julia -e 'using Pkg; Pkg.instantiate(); Pkg.precompile()' &&
