ndjson to parquet

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,8 @@
         "tamasfe.even-better-toml",
         "nefrob.vscode-just-syntax",
         "mtxr.sqltools",
-        "evidence.sqltools-bigquery-driver"
+        "evidence.sqltools-bigquery-driver",
+        "dvirtz.parquet-viewer"
       ]
     }
   }
